added application icon

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -30,7 +30,7 @@
         </div>
         <div id="credits" class="blank-popup">
             Made by Maksymilian "pixl" Sroka.<br/>
-            <span class="link" id="source">Source</span> \\ <span class="link" id="website">Website</span>
+            <span class="link" id="source">Source</span></span>
         </div>
     </div>
     <div class="tab blank-popup" id="settings"><i class="arrow down"></i></div>
